--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>project-b</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/svg/logo2.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>warmtotuch | Quality Home Decor</title>
+  <meta name="description"
+    content="Handmade macrame, mugs, and home decor from warmtotuch. Quality products with fast delivery across Egypt." />
+  <meta property="og:image" content="https://www.warmtotuch.store/svg/logo2.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
