change the colors

--- a/index.html
+++ b/index.html
@@ -3,12 +3,33 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/svg/logo2.png" />
+  <link rel="icon" type="image/png" href="https://www.warmtotuch.store/svg/logo2.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>warmtotuch | Quality Home Decor</title>
+  
+  <!-- Primary Meta Tags -->
+  <title>warmtotuch | Quality Home Decor & Handmade Macrame Egypt</title>
+  <meta name="title" content="warmtotuch | Quality Home Decor & Handmade Macrame Egypt" />
   <meta name="description"
-    content="Handmade macrame, mugs, and home decor from warmtotuch. Quality products with fast delivery across Egypt." />
-  <meta property="og:image" content="https://www.warmtotuch.store/svg/logo2.png" />
+    content="warmtotuch (often searched as warmtotch) - Handmade macrame, artisan mugs, and unique home decor in Egypt. Quality handcrafted products with fast delivery." />
+  <meta name="keywords" content="warmtotuch, warmtotch, macrame egypt, handmade decor egypt, artisan mugs giza, home accessories egypt, hand knotted macrame" />
+  <meta name="author" content="warmtotuch" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.warmtotuch.store/" />
+  <meta property="og:title" content="warmtotuch | Quality Home Decor & Handmade Macrame Egypt" />
+  <meta property="og:description" content="Handmade macrame, artisan mugs, and unique home decor. Quality products with fast delivery across Egypt." />
+  <meta property="og:image" content="https://www.warmtotuch.store/svg/og-imag.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.warmtotuch.store/" />
+  <meta property="twitter:title" content="warmtotuch | Quality Home Decor & Handmade Macrame Egypt" />
+  <meta property="twitter:description" content="Handmade macrame, artisan mugs, and unique home decor. Quality products with fast delivery across Egypt." />
+  <meta property="twitter:image" content="https://www.warmtotuch.store/svg/og-imag.png" />
+
+  <!-- Canonical Link -->
+  <link rel="canonical" href="https://www.warmtotuch.store/" />
 </head>
 
 <body>
