change the colors

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="https://www.warmtotuch.store/svg/logo2.png" />
+  <link rel="icon" type="image/png" href="https://www.warmtotuch.store/svg/logo2.png" sizes="48*48"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
   <!-- Primary Meta Tags -->
   <title>warmtotuch | Quality Home Decor & Handmade Macrame Egypt</title>
   <meta name="title" content="warmtotuch | Quality Home Decor & Handmade Macrame Egypt" />
